# runde10-lawinprogress

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  Makefile  Procfile  README.md  logging.conf  pyproject.toml  requirements.txt  roadmap.md
data/: 0483-21_wettbewerbsgesetzt.txt  notes_on_change_laws.md
data/source_laws/: Arbeitsgerichtsgesetz.txt  Berliner Straßengesetz.txt  Bundes-Klimaschutzgesetzes.txt  Bundesmeldegesetzes.txt  Dritten Buches Sozialgesetzbuch.txt  EG-Verbraucherschutzdurchsetzungsgesetzes.txt  Elektronischer-Rechtsverkehr-Verordnung.txt  Gesetz über Ordnungswidrigkeiten.txt  Gesetzes  über die  Errichtung des  Bundesamts  für Justiz.txt  Infektionsschutzgesetzes.txt  Mindestlohndokumentationspflichten-Verordnung.txt  Mindestlohngesetzes.txt  Sozialgerichtsgesetzes.txt  Strafgesetzbuches.txt  Strafprozessordnung.txt  Zivilprozessordnung.txt
doc/: NOTES.md
lawinprogress/: __init__.py  generate_diff.py  source_law_api.py
lawinprogress/app/: html.py
lawinprogress/apply_changes/: apply_changes.py  edit_functions.py
lawinprogress/libdiff/: diffhelpers.py  html_diff.py
lawinprogress/parsing/: change_law_utils.py  lawtree.py  parse_change_law.py  parse_source_law.py  proposal_pdf_to_artikles.py
mybulma/: package.json
mybulma/sass/: mystyles.scss
notebooks/: 210906_NT_firstweek.ipynb  210906_NT_parsing_raw_entwurf.ipynb  210906_TS_exploratory-parsing.ipynb  210906_TS_exploratory-stuff.ipynb  210920_TS_Parsing_and_updating_workbench-berliner-straßengesetz.ipynb  210920_TS_Parsing_and_updating_workbench_zivilprozessordnung.ipynb  210922_NT_API_exploration.ipynb  211119_TS_remove_headers_and_footers_from_pdf.ipynb  211202_TS_html_diff.ipynb  220114_NT_API.ipynb  220128_TS_fuzzy_mathcing_of_law_titles.ipynb
pre_law_viewer/: generate_diff.py
scripts/: generate_updated_version.py  parse_change_law_pdf.py  update_source_law_lookup.py
tests/: conftest.py  test_change_law_utils.py  test_edit_functions.py  test_generate_diff.py  test_lawtextnode.py  test_parse_change_law.py  test_process_pdf.py  test_source_law_api.py  test_source_law_retrieval.py
(+16 files in other folders)
