[tool.poetry]
name = "lawinprogress"
version = "0.1.0"
description = "Making changes in laws more transparent."
authors = ["Tobias Sterbak <hello@tobiassterbak.com>, Noa Tamir <hello@noatamir.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.1.10"
click = "^7.1.2"
pdfplumber = "^0.5.28"
anytree = "^2.8.0"
spacy = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = {extras = ["jupyter"], version = "^21.9b0"}
isort = "^5.9.3"
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
